--- a/demo.html
+++ b/demo.html
@@ -6,69 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Bootstrap Photo Gallery Demo</title>
+    <title>Archive</title>
+    <link rel="stylesheet" type="text/css" href="photo-gallery.css">
+    <script src="vendor/jquery-1.11.3.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="photo-gallery.js"></script>
+    
   </head>
-  <style>
-      ul {         
-          padding:0 0 0 0;
-          margin:0 0 0 0;
-      }
-      ul li {     
-          list-style:none;
-          margin-bottom:25px;           
-      }
-      ul li img {
-          cursor: pointer;
-      }
-      .modal-body {
-          padding:5px !important;
-      }
-      .modal-content {
-          border-radius:0;
-      }
-      .modal-dialog img {
-          text-align:center;
-          margin:0 auto;
-      }
-    .controls{          
-        width:50px;
-        display:block;
-        font-size:11px;
-        padding-top:8px;
-        font-weight:bold;          
-    }
-    .next {
-        float:right;
-        text-align:right;
-    }
-      /*override modal for demo only*/
-      .modal-dialog {
-          max-width:500px;
-          padding-top: 90px;
-      }
-      @media screen and (min-width: 768px){
-          .modal-dialog {
-              width:500px;
-              padding-top: 90px;
-          }          
-      }
-      @media screen and (max-width:1500px){
-          #ads {
-              display:none;
-          }
-      }
-  </style>
   <body>    
     <div class="container">    
         <div class="row" style="text-align:center; border-bottom:1px dashed #ccc;  padding:0 0 20px 0; margin-bottom:40px;">
             <h3 style="font-family:arial; font-weight:bold; font-size:30px;">
-                <a style="text-decoration:none; color:#666;" href="http://fearlessflyer.com/create-a-responsive-photo-gallery-with-bootstrap">Responsive Photo Gallery with Bootstrap <span style="color:red;">Demo</span></a>
+                <a style="text-decoration:none; color:#666;" href="http://fearlessflyer.com/create-a-responsive-photo-gallery-with-bootstrap">Archive</a>
             </h3>
-            <p>Resize your browser and watch the gallery adapt to the view port size. Clicking on an image will activate the Modal. Click <strong><a style="color:red" href="http://fearlessflyer.com/create-a-responsive-photo-gallery-with-bootstrap">Here</a></strong> to go back to the tutorial</p>
         </div>
         
         <ul class="row">
